[package]
name = "playground"
version = "0.1.0"
edition = "2021"

[dependencies]
bumpalo = { version = "3.12.0", features = ["collections"] }
roc_target = { git = "https://github.com/roc-lang/roc.git" }
roc_load = { git = "https://github.com/roc-lang/roc.git" }
roc_reporting = { git = "https://github.com/roc-lang/roc.git" }
roc_packaging = { git = "https://github.com/roc-lang/roc.git" }
roc_gen_wasm = { git = "https://github.com/roc-lang/roc.git" }
roc_collections = { git = "https://github.com/roc-lang/roc.git" }
roc_can = { git = "https://github.com/roc-lang/roc.git" }
roc_region = { git = "https://github.com/roc-lang/roc.git" }
roc_solve = { git = "https://github.com/roc-lang/roc.git" }
roc_module = { git = "https://github.com/roc-lang/roc.git" }
roc_types = { git = "https://github.com/roc-lang/roc.git" }
roc_load_internal = { git = "https://github.com/roc-lang/roc.git" }
